--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,18 +5,18 @@ on:
     tags:
       - v*.*.*
 
-env:
-  PYTHON_VERSION: '3.9'
-
 jobs:
   test:
     name: test 🧪
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ matrix.python-version }}
       - run: python -m unittest
 
   publish:
